styles updated, pending to solve text truncate in chip and category filter

--- a/src/components/Expenses/ExpenseCard.module.css
+++ b/src/components/Expenses/ExpenseCard.module.css
@@ -61,10 +61,6 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.custom-accordion {
-    /* Your custom styles for the accordion */
-}
-
 .custom-accordion-item {
     /* Your custom styles for the accordion item */
     background-color: #283f3b !important;
@@ -80,7 +76,7 @@
     color: #99ddc8;
 }
 
-.filter-icon{
+.filter-icon {
     width: 30px;
     filter: invert();
 }
